--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	-> KageRyo 個人網站使用 HTML5 UP 提供的模板 <-
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>影凌KageRyo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +18,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>I am CHANG, CHIEN-HSUN</strong>, a Developer<br />
+					You can call me KageRyo<br />
+					Team <a href="https://github.com/DreamFuture-Studio/">DreamFuture-Studio</a>.</h1>
 				</div>
 			</header>
 
