--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>來自臺灣的軟體開發者<br />
+							目前是大學生一枚，歡迎合作或相互交流！</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>人生和 Coding 一樣，都是從<strong> print("Hello World"); </strong>開始的。</br>
+							國立臺中科技大學 智慧生產工程系 / 資訊工程系</br>
+							努力學習中... </p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">看看更多</a></li>
 						</ul>
 					</section>
 
