更新部分文本

--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>最近的專案</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Minecraft插件 - 大樂透</h3>
+								<p>透過 Java 開發的 Minecraft 遊戲插件，玩法仿照大樂透！</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Discord機器人 - 夢見未來機器人</h3>
+								<p>夢見未來工作室的多功能機器人，各種玩法功能等你來嘗試！</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
@@ -77,42 +77,43 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/KageRyo" class="button">所有專案</a></li>
 						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<h2>聯繫影凌</h2>
+						<p>想讓客製化軟體專案嗎，透過以下欄位立即聯繫我吧，聯繫後將有專人向您回復並連繫！</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="如何稱呼您呢？" /></div>
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="電子郵件" /></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="內文" rows="4"></textarea></div>
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="發送訊息" /></li>
 								</ul>
 							</div>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										<h3 class="icon solid fa-home"><span class="label">地址</span></h3>
+										臺灣<br />
+										臺中市, 404北區<br />
+										三民路三段91號<br />
+										G303 張健勳 收
 									</li>
 									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										<h3 class="icon solid fa-mobile-alt"><span class="label">手機</span></h3>
+										抱歉，暫不提供此服務。
 									</li>
 									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<h3 class="icon solid fa-envelope"><span class="label">信箱</span></h3>
+										<a href="#">k6.developer@gmail.com</a>
 									</li>
 								</ul>
 							</div>
