--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am CHANG, CHIEN-HSUN</strong>, a Developer<br />
-					You can call me KageRyo<br />
+					<h1><strong>I am CHANG, CHIEN-HSUN(張健勳)</strong>, a Developer<br />
+					You can call me KageRyo(影凌)<br />
 					Team <a href="https://github.com/DreamFuture-Studio/">DreamFuture-Studio</a>.</h1>
 				</div>
 			</header>
