--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			</header>
 
 		<!-- Main -->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4336859474033240"
+     crossorigin="anonymous"></script>
 			<div id="main">
-
 				<!-- One -->
 					<section id="one">
 						<header class="major">
