--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<!-- 標頭檔	 -->
 	<head>
 		<meta charset="utf-8">
-		<title>KageRyo Developer</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- 套用TocasUI始春好棒棒UI -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.1.0/tocas.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.1.0/tocas.min.js"></script>
@@ -11,9 +11,15 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet" />
+		<title>KageRyo Developer</title>
 	</head>
 	<!-- 頁面內容 -->
 	<body>
-		
+		<div class="窮頂">
+		</div>
+		<div class="主要內容">
+		</div>
+		<div class="頁腳">
+		</div>
 	</body>
 </html>
