--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
 	</head>
 	<!-- 頁面內容 -->
 	<body>
-		<div class="窮頂">
-		</div>
-		<div class="主要內容">
-		</div>
-		<div class="頁腳">
-		</div>
+		敬請期待 網頁建構中
 	</body>
 </html>
